--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.65.1",
     "react-native-push-notification": "^8.1.0",
     "react-native-svg": "^12.1.1",
-    "react-native-svg-transformer": "^0.14.3"
+    "react-native-svg-transformer": "^0.14.3",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
